[gd_scene load_steps=2 format=3 uid="uid://brdyuynbiw030"]

[ext_resource type="Script" path="res://examples/basic_example/example_scene.gd" id="1_tf2hn"]

[node name="ExampleScene" type="Node2D"]
script = ExtResource("1_tf2hn")

[node name="Txt" type="Label" parent="."]
offset_left = 458.0
offset_top = 346.0
offset_right = 498.0
offset_bottom = 369.0
text = "Text"

[node name="Value" type="Label" parent="."]
offset_left = 467.0
offset_top = 371.0
offset_right = 507.0
offset_bottom = 394.0
text = "0"

[node name="increase" type="Button" parent="."]
offset_left = 487.0
offset_top = 413.0
offset_right = 505.0
offset_bottom = 444.0
text = "+"

[node name="Save" type="Button" parent="."]
offset_left = 399.0
offset_top = 482.0
offset_right = 443.0
offset_bottom = 513.0
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = 471.0
offset_top = 483.0
offset_right = 515.0
offset_bottom = 514.0
text = "Load"

[node name="decrease" type="Button" parent="."]
offset_left = 454.0
offset_top = 414.0
offset_right = 472.0
offset_bottom = 445.0
text = "-"

[node name="Name" type="LineEdit" parent="."]
offset_left = 394.0
offset_top = 298.0
offset_right = 571.0
offset_bottom = 329.0
placeholder_text = "Your name"

[connection signal="pressed" from="increase" to="." method="_on_increase_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="decrease" to="." method="_on_decrease_pressed"]
